# nodejs-server/api/openapi.yaml
@@ -349,6 +349,107 @@ paths:
                 example: '{"message":" Error 404. Page or Request not found."}'
                 x-content-type: application/json
       x-swagger-router-controller: Usuarios
+    post:
+      tags:
+      - usuarios
+      description: Permite crear nuevo reporte
+      operationId: usuariosPOST
+      parameters:
+      - name: id
+        in: query
+        description: Crea usuario
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          example: "1"
+      responses:
+        "200":
+          description: Crea un nuevo usuario.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: '{"message":"Usuario creado"}'
+                x-content-type: application/json
+        "404":
+          description: Request Not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: '{"message":" Información invalida."}'
+                x-content-type: application/json
+      x-swagger-router-controller: Usuarios
+  /usuarios/{id}:
+    get:
+      tags:
+      - usuarios
+      description: Permite traer usuario por Id
+      operationId: usuariosIdGET
+      parameters:
+      - name: id
+        in: path
+        description: Identificación id del usuario
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          example: 1
+      responses:
+        "200":
+          description: Trae usuario especificaste en el id.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/inline_response_200_3'
+                x-content-type: application/json
+        "400":
+          description: Request Not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: '{"message":" Error 404. Usuario no existente."}'
+                x-content-type: application/json
+      x-swagger-router-controller: Usuarios
+    delete:
+      tags:
+      - usuarios
+      description: Permite eliminar un usuario.
+      operationId: usuariosIdDELETE
+      parameters:
+      - name: id
+        in: path
+        description: Codigo de id del usuario
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          example: 1
+      responses:
+        "200":
+          description: Elimina un usuario por id.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: '{"message":"Usuario eliminado"}'
+                x-content-type: application/json
+        "404":
+          description: Request Not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: '{"message":" Información invalida."}'
+                x-content-type: application/json
+      x-swagger-router-controller: Usuarios
 components:
   schemas:
     inline_response_200:
