# nodejs-server/controllers/Usuarios.js
@@ -12,3 +12,33 @@ module.exports.usuariosGET = function usuariosGET (req, res, next, id) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.usuariosIdDELETE = function usuariosIdDELETE (req, res, next, id) {
+  Usuarios.usuariosIdDELETE(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.usuariosIdGET = function usuariosIdGET (req, res, next, id) {
+  Usuarios.usuariosIdGET(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.usuariosPOST = function usuariosPOST (req, res, next, id) {
+  Usuarios.usuariosPOST(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
